--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://key921211.github.io/map_app/"
+  "homepage": "http://key921211.github.io/map_app/"
 }
